--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux": "4.2.0",
     "redux-thunk": "2.4.2",
     "styled-components": "^6.0.8",
-    "stylelint-order": "5.0.0"
+    "stylelint-order": "5.0.0",
+    "sweetalert2": "^11.7.32"
   },
   "scripts": {
     "cy": "env CY_CLI=true cypress run",
